# vcs-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  repository_scraper_requirements_linux.txt  requirements_linux.txt  requirements_windows.txt  scrape_repos.ipynb
data/: java_subset.parquet  kotlin_repos.csv  kotlin_subset.parquet  python_subset.parquet
repos/demo-repo.git/: config  packed-refs
repos/mixed-file-types-demo.git/: config  packed-refs
src/: main.py  programming_language.py  repository_data_scraper.py
src/ideformer_client/: exceptions.py  run_agent_client.py  terminal_access_tool_Provider.py  terminal_access_tool_provider.py
src/ideformer_client/data/: PromptProvider.py  git_dataset_provider.py  prompt_provider.py  yt_connection_manager.py
src/ideformer_client/environment/: docker_manager.py  evaluator.py  scenario_environment_manager.py  scenario_type.py  terminal_access_tool_provider.py
src/notebooks/: analyze_dataset.ipynb  scrape_repos.ipynb
src/repository_data_scraper/: main.py  programming_language.py  repository_data_scraper.py
src/test/: test_compute_file_commit_grams.py  test_evaluator.py  test_find_branches_containing_commit.py  test_git_commands.py  test_scrape.py  test_update_accumulator_with.py
src/yt_scripts/: create_yt_table.py  get_datapoint_from_dataset.py  mapper.py  mappers.py  parse_dataset_into_dataframe.py  read_and_write_to_vql.py  schemas.py  yt_maintenance_utils.py
